// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header renders correctly with props 1`] = `
.emotion-0 {
  background-color: var(--foreground);
  color: var(--background);
  font-size: 27px;
  font-weight: 700;
  height: 100px;
  left: 0;
  line-height: 100px;
  opacity: 1;
  position: fixed;
  text-align: center;
  -webkit-transition: opacity .333s;
  transition: opacity .333s;
  top: 0;
  width: 250px;
  z-index: 10;
}

.emotion-0.isFullscreen {
  opacity: 0.65;
}

@media (min-width: 576px) {
  .emotion-0 {
    font-size: 37px;
    width: 400px;
  }
}

.emotion-1 {
  line-height: 40px;
  opacity: 1;
  outline: 0;
  position: fixed;
  text-align: center;
  top: 100px;
  -webkit-transform: translateY(calc(-100% + 40px));
  -moz-transform: translateY(calc(-100% + 40px));
  -ms-transform: translateY(calc(-100% + 40px));
  transform: translateY(calc(-100% + 40px));
  -webkit-transition: -webkit-transform .333s,opacity .333s;
  transition: transform .333s,opacity .333s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 180px;
  z-index: 9;
}

@media (min-width: 768px) {
  .emotion-1 {
    -webkit-transform: translateY(calc(-100% + 20px));
    -moz-transform: translateY(calc(-100% + 20px));
    -ms-transform: translateY(calc(-100% + 20px));
    transform: translateY(calc(-100% + 20px));
  }
}

.emotion-1.isFullscreen {
  opacity: 0;
}

.emotion-1 div {
  -webkit-transition: background-color .333s,color .333s;
  transition: background-color .333s,color .333s;
  background-color: var(--background);
  color: var(--foreground);
}

@media (min-width: 768px) {
  .emotion-1 div {
    line-height: 20px;
  }
}

.emotion-1 div:hover {
  background: var(--foreground);
  color: var(--background);
}

.emotion-1.open {
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.emotion-1.open div {
  cursor: default;
}

.emotion-1.open div:hover {
  background-color: var(--background);
  color: var(--foreground);
}

.emotion-1 ul {
  background-color: var(--foreground);
  color: var(--background);
}

.emotion-1 li {
  -webkit-transition: opacity .333s;
  transition: opacity .333s;
}

.emotion-1 li:hover {
  opacity: 0.666;
}

.emotion-1 div,
.emotion-1 li {
  cursor: pointer;
  font-weight: 700;
  text-transform: uppercase;
}

.emotion-2 {
  cursor: pointer;
  left: 180px;
  line-height: 40px;
  opacity: 1;
  outline: 0;
  position: fixed;
  text-align: center;
  top: 100px;
  -webkit-transition: opacity .333s;
  transition: opacity .333s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 40px;
  z-index: 9;
}

@media (min-width: 768px) {
  .emotion-2 {
    line-height: 20px;
    top: 120px;
    width: 20px;
  }
}

.emotion-2.isFullscreen {
  opacity: 0;
}

.emotion-2 button {
  background-color: var(--background);
  border: 1px solid var(--foreground);
  color: var(--foreground);
  cursor: pointer;
  font-size: 14px;
  font-weight: 700;
  height: 40px;
  padding: 0;
  text-transform: uppercase;
  -webkit-transition: background-color .333s,color .333s;
  transition: background-color .333s,color .333s;
  width: 40px;
}

@media (min-width: 768px) {
  .emotion-2 button {
    font-size: 10px;
    height: 20px;
    width: 20px;
  }
}

.emotion-2 button:hover {
  background: var(--foreground);
  color: var(--background);
}

<div>
  <header>
    <h1
      class="isFullscreen emotion-0"
    >
      <a
        href="/"
      >
        EYESBOUND
      </a>
    </h1>
    <nav
      class="isFullscreen emotion-1"
    >
      <ul>
        <li>
          <a
            href="/picture"
          >
            navigation.overview
          </a>
        </li>
        <li>
          <a
            href="/series/shuttered"
          >
            »Shuttered«
          </a>
        </li>
        <li>
          <a
            href="/category/architecture"
          >
            Architecture
          </a>
        </li>
        <li>
          <a
            href="/category/environment"
          >
            Environment
          </a>
        </li>
        <li>
          <a
            href="/category/floral"
          >
            Floral
          </a>
        </li>
        <li>
          <a
            href="/category/light"
          >
            Light
          </a>
        </li>
        <li>
          <a
            href="/worldmap"
          >
            navigation.worldmap
          </a>
        </li>
        <li>
          <a
            href="/imprint"
          >
            navigation.contact
          </a>
        </li>
      </ul>
      <div>
        navigation.menu
      </div>
    </nav>
    <div
      class="isFullscreen emotion-2"
    >
      <button
        title="Switch to German"
        type="button"
      >
        EN
      </button>
    </div>
  </header>
</div>
`;

exports[`Header renders correctly without props 1`] = `
.emotion-0 {
  background-color: var(--foreground);
  color: var(--background);
  font-size: 27px;
  font-weight: 700;
  height: 100px;
  left: 0;
  line-height: 100px;
  opacity: 1;
  position: fixed;
  text-align: center;
  -webkit-transition: opacity .333s;
  transition: opacity .333s;
  top: 0;
  width: 250px;
  z-index: 10;
}

.emotion-0.isFullscreen {
  opacity: 0.65;
}

@media (min-width: 576px) {
  .emotion-0 {
    font-size: 37px;
    width: 400px;
  }
}

.emotion-1 {
  line-height: 40px;
  opacity: 1;
  outline: 0;
  position: fixed;
  text-align: center;
  top: 100px;
  -webkit-transform: translateY(calc(-100% + 40px));
  -moz-transform: translateY(calc(-100% + 40px));
  -ms-transform: translateY(calc(-100% + 40px));
  transform: translateY(calc(-100% + 40px));
  -webkit-transition: -webkit-transform .333s,opacity .333s;
  transition: transform .333s,opacity .333s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 180px;
  z-index: 9;
}

@media (min-width: 768px) {
  .emotion-1 {
    -webkit-transform: translateY(calc(-100% + 20px));
    -moz-transform: translateY(calc(-100% + 20px));
    -ms-transform: translateY(calc(-100% + 20px));
    transform: translateY(calc(-100% + 20px));
  }
}

.emotion-1.isFullscreen {
  opacity: 0;
}

.emotion-1 div {
  -webkit-transition: background-color .333s,color .333s;
  transition: background-color .333s,color .333s;
  background-color: var(--background);
  color: var(--foreground);
}

@media (min-width: 768px) {
  .emotion-1 div {
    line-height: 20px;
  }
}

.emotion-1 div:hover {
  background: var(--foreground);
  color: var(--background);
}

.emotion-1.open {
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.emotion-1.open div {
  cursor: default;
}

.emotion-1.open div:hover {
  background-color: var(--background);
  color: var(--foreground);
}

.emotion-1 ul {
  background-color: var(--foreground);
  color: var(--background);
}

.emotion-1 li {
  -webkit-transition: opacity .333s;
  transition: opacity .333s;
}

.emotion-1 li:hover {
  opacity: 0.666;
}

.emotion-1 div,
.emotion-1 li {
  cursor: pointer;
  font-weight: 700;
  text-transform: uppercase;
}

.emotion-2 {
  cursor: pointer;
  left: 180px;
  line-height: 40px;
  opacity: 1;
  outline: 0;
  position: fixed;
  text-align: center;
  top: 100px;
  -webkit-transition: opacity .333s;
  transition: opacity .333s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 40px;
  z-index: 9;
}

@media (min-width: 768px) {
  .emotion-2 {
    line-height: 20px;
    top: 120px;
    width: 20px;
  }
}

.emotion-2.isFullscreen {
  opacity: 0;
}

.emotion-2 button {
  background-color: var(--background);
  border: 1px solid var(--foreground);
  color: var(--foreground);
  cursor: pointer;
  font-size: 14px;
  font-weight: 700;
  height: 40px;
  padding: 0;
  text-transform: uppercase;
  -webkit-transition: background-color .333s,color .333s;
  transition: background-color .333s,color .333s;
  width: 40px;
}

@media (min-width: 768px) {
  .emotion-2 button {
    font-size: 10px;
    height: 20px;
    width: 20px;
  }
}

.emotion-2 button:hover {
  background: var(--foreground);
  color: var(--background);
}

<div>
  <header>
    <h1
      class="emotion-0"
    >
      <a
        href="/"
      >
        EYESBOUND
      </a>
    </h1>
    <nav
      class="emotion-1"
    >
      <ul>
        <li>
          <a
            href="/picture"
          >
            navigation.overview
          </a>
        </li>
        <li>
          <a
            href="/series/shuttered"
          >
            »Shuttered«
          </a>
        </li>
        <li>
          <a
            href="/category/architecture"
          >
            Architecture
          </a>
        </li>
        <li>
          <a
            href="/category/environment"
          >
            Environment
          </a>
        </li>
        <li>
          <a
            href="/category/floral"
          >
            Floral
          </a>
        </li>
        <li>
          <a
            href="/category/light"
          >
            Light
          </a>
        </li>
        <li>
          <a
            href="/worldmap"
          >
            navigation.worldmap
          </a>
        </li>
        <li>
          <a
            href="/imprint"
          >
            navigation.contact
          </a>
        </li>
      </ul>
      <div>
        navigation.menu
      </div>
    </nav>
    <div
      class="emotion-2"
    >
      <button
        title="Switch to German"
        type="button"
      >
        EN
      </button>
    </div>
  </header>
</div>
`;
